Add checkboxes and switches; refactor input components
- Added a new section for checkboxes and switches in `FormTesting.razor`.
- Introduced `Checkbox` and `Switch` properties in `InputModel` with validation.
- Removed `InputCheckboxAppearance` enum and related code.
- Refactored `TnTInputBase` for custom content rendering and improved label/icon handling.
- Simplified `TnTInputCheckbox` by removing color parameters and adding custom content rendering.
- Simplified `TnTInputSwitch` by removing color parameters.
- Updated `_colors.scss` to exclude checkboxes from certain background rules.
- Enhanced `_input.scss` to style checkboxes, including hover, focus, and validation states.

--- a/LiveTest/LiveTest.Client/Components/FormTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/FormTesting.razor
@@ -94,6 +94,19 @@
             <TnTInputCurrency @bind-Value="@Input.Currency" Placeholder="@_placeholder" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" />
         </TnTColumn>
     </TnTRow>
+
+    <TnTRow>
+        <h3>
+            Checkboxes
+        </h3>
+        <TnTColumn S="6">
+            <TnTInputCheckbox @bind-Value="@Input.Checkbox" Placeholder="@_placeholder" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" />
+        </TnTColumn>
+
+        <TnTColumn S="6">
+            <TnTInputSwitch @bind-Value="@Input.Switch" Placeholder="@_placeholder" Label="@_label" StartIcon="@_startIcon" EndIcon="@_endIcon" />
+        </TnTColumn>
+    </TnTRow>
 </TnTForm>
 @Input.Text
 @Input.Integer
@@ -133,6 +146,12 @@
 
         [Required]
         public decimal? Currency { get; set; }
+
+        [Required, Range(typeof(bool), "true", "true")]
+        public bool Checkbox { get; set; }
+
+        [Required]
+        public bool Switch { get; set; }
 
     }
 
