Refactor TnTInputSwitch and update _input.scss styles
Refactored TnTInputSwitch to inherit from TnTInputCheckbox and added ElementClass property to include "tnt-switch" class. Updated _input.scss to differentiate styles between regular checkboxes and switch checkboxes, including new dimensions, border styles, background colors, and state-specific styles for switches.

--- a/TnTComponents/Styles/TnTComponents/_input.scss
+++ b/TnTComponents/Styles/TnTComponents/_input.scss
@@ -60,13 +60,17 @@
         &:has(.tnt-start-icon) {
             padding-left: 0.75rem;
 
-            .tnt-label {
-                transform: translateX(2.5rem);
+            &:not(:has(input[type=checkbox])) {
+
+                .tnt-label {
+                    transform: translateX(2.5rem);
+                }
             }
         }
 
         .tnt-icon {
             color: inherit;
+            user-select: none;
 
             &.tnt-end-icon {
                 padding-left: 1rem;
@@ -82,17 +86,21 @@
         outline: 1px solid $tnt-color-outline;
         @extend .tnt-border-radius-1;
 
-        @each $colorClass in $color-classes {
-            &.tnt-bg-color-#{$colorClass} {
-                .tnt-label {
-                    background-color: var(--tnt-color-#{$colorClass});
-                }
-            }
-        }
 
-        &.tnt-placeholder, &:not(:has(input:placeholder-shown)), &:focus-within {
-            .tnt-label {
-                transform: translateY(-1.65rem);
+
+        &:not(:has(input[type=checkbox])) {
+            &.tnt-placeholder, &:not(:has(input:placeholder-shown)), &:focus-within {
+                @each $colorClass in $color-classes {
+                    &.tnt-bg-color-#{$colorClass} {
+                        .tnt-label {
+                            background-color: var(--tnt-color-#{$colorClass});
+                        }
+                    }
+                }
+
+                .tnt-label {
+                    transform: translateY(-1.65rem);
+                }
             }
         }
     }
@@ -104,15 +112,17 @@
             transform: translateY(0.5rem);
         }
 
-        &.tnt-placeholder, &:not(:has(input:placeholder-shown)), &:focus-within {
-            .tnt-label {
-                transform-origin: left;
-                transform: translateY(-1rem) scale(0.8);
-            }
-
-            &:has(.tnt-start-icon) {
+        &:not(:has(input[type=checkbox])) {
+            &.tnt-placeholder, &:not(:has(input:placeholder-shown)), &:focus-within {
                 .tnt-label {
-                    transform: translateX(2.5rem) translateY(-0.8rem) scale(0.8);
+                    transform-origin: left;
+                    transform: translateY(-1rem) scale(0.8);
+                }
+
+                &:has(.tnt-start-icon) {
+                    .tnt-label {
+                        transform: translateX(2.5rem) translateY(-0.8rem) scale(0.8);
+                    }
                 }
             }
         }
@@ -131,14 +141,20 @@
                     caret-color: var(--tnt-color-#{$colorClass});
                 }
 
-                .tnt-label {
-                    color: var(--tnt-color-#{$colorClass});
+                &:not(:has(input[type=checkbox])) {
+                    .tnt-label {
+                        color: var(--tnt-color-#{$colorClass});
+                    }
                 }
             }
         }
 
-        .tnt-label {
-            @extend .tnt-label-large;
+
+
+        &:not(:has(input[type=checkbox])) {
+            .tnt-label {
+                @extend .tnt-label-large;
+            }
         }
     }
 
@@ -178,39 +194,89 @@
 
         .tnt-checkbox {
             position: absolute;
-            width: 2.5rem;
-            height: 2.5rem;
-            border-radius: 50%;
-
+            transition: 250ms ease-in-out;
 
             &:before {
                 position: absolute;
                 content: '';
-                width: 1.125rem;
-                height: 1.125rem;
-                left: calc(100% / 2 - calc(1.125rem / 2));
-                top: calc(100% / 2 - calc(1.125rem / 2));
-                border-radius: 2px;
-                border: 2px solid $tnt-color-outline;
                 box-sizing: border-box;
-                transition: 250ms;
+                transition: inherit;
             }
 
             &:after {
                 position: absolute;
                 content: '';
-                width: calc(1.125rem / 3);
-                height: calc(1.125rem * .7);
-                left: 0; //;
-                top: 0; //;
                 box-sizing: border-box;
-                border-radius: 1px;
-                border-bottom-width: 2px;
-                border-right-width: 2px;
-                border-bottom-style: solid;
-                border-right-style: solid;
-                transform: translateX(calc(2.5rem / 2 - calc(calc(1.125rem / 3) / 2))) translateY(calc(2.5rem / 2 - calc(calc(1.125rem * .8) / 1.75))) rotateZ(45deg) rotateX(90deg);
-                transition: 250ms;
+                transition: inherit;
+            }
+        }
+
+        &:not(.tnt-switch) {
+            .tnt-checkbox {
+                width: 2.5rem;
+                height: 2.5rem;
+                border-radius: 50%;
+
+
+                &:before {
+                    width: 1.125rem;
+                    height: 1.125rem;
+                    left: calc(100% / 2 - calc(1.125rem / 2));
+                    top: calc(100% / 2 - calc(1.125rem / 2));
+                    border-radius: 2px;
+                    border: 2px solid $tnt-color-outline;
+                }
+
+                &:after {
+                    width: calc(1.125rem / 3);
+                    height: calc(1.125rem * .7);
+                    left: 0; //;
+                    top: 0; //;
+                    border-radius: 1px;
+                    border-bottom-width: 2px;
+                    border-right-width: 2px;
+                    border-bottom-style: solid;
+                    border-right-style: solid;
+                    transform: translateX(calc(2.5rem / 2 - calc(calc(1.125rem / 3) / 2))) translateY(calc(2.5rem / 2 - calc(calc(1.125rem * .8) / 1.75))) rotateZ(45deg) rotateX(90deg);
+                }
+            }
+
+            @each $colorClass in $color-classes {
+                &.tnt-fg-color-#{$colorClass} {
+                    .tnt-checkbox:after {
+                        border-color: var(--tnt-color-#{$colorClass});
+                        filter: invert(1);
+                    }
+                }
+            }
+        }
+
+        &.tnt-switch {
+            .tnt-checkbox {
+                width: 2.75rem;
+                height: 1.5rem;
+                border: 2px solid $tnt-color-outline;
+                background-color: $tnt-color-surface-container-highest;
+                border-radius: 8rem;
+                box-sizing: border-box;
+
+                &:before {
+                    width: 2.5rem;
+                    height: 2.5rem;
+                    left: calc(2.5rem / -2 + 0.75rem);
+                    top: -50%;
+                    border-radius: 50%;
+                }
+
+                &:after {
+                    width: 0.75rem;
+                    height: 0.75rem;
+                    border-radius: 50%;
+                    background-color: $tnt-color-outline;
+                    left: 0.4rem;
+                    top: calc(50% / 2 - calc(0.75rem / 8));
+                    @extend .tnt-elevation-1;
+                }
             }
         }
 
@@ -221,14 +287,6 @@
             margin-left: 3rem;
         }
 
-        @each $colorClass in $color-classes {
-            &.tnt-fg-color-#{$colorClass} {
-                .tnt-checkbox:after {
-                    border-color: var(--tnt-color-#{$colorClass});
-                    filter: invert(1);
-                }
-            }
-        }
 
         .tnt-icon {
             transform: none;
@@ -236,25 +294,64 @@
 
         &:has(input:checked) {
 
-            @each $colorClass in $color-classes {
-                &.tnt-tint-color-#{$colorClass} {
+            &:not(.tnt-switch) {
+                @each $colorClass in $color-classes {
+                    &.tnt-tint-color-#{$colorClass} {
+                        .tnt-checkbox:before {
+                            background-color: var(--tnt-color-#{$colorClass});
+                            border-color: var(--tnt-color-#{$colorClass});
+                        }
+                    }
+                }
+
+                .tnt-checkbox {
+                    &:after {
+                        transform: translateX(calc(2.5rem / 2 - calc(calc(1.125rem / 3) / 2))) translateY(calc(2.5rem / 2 - calc(calc(1.125rem * .8) / 1.75))) rotateZ(45deg);
+                    }
+                }
+
+                &:has(input:disabled) {
                     .tnt-checkbox:before {
-                        background-color: var(--tnt-color-#{$colorClass});
-                        border-color: var(--tnt-color-#{$colorClass});
+                        background-color: $tnt-color-outline;
+                        border-color: $tnt-color-outline;
                     }
                 }
             }
 
-            .tnt-checkbox {
-                &:after {
-                    transform: translateX(calc(2.5rem / 2 - calc(calc(1.125rem / 3) / 2))) translateY(calc(2.5rem / 2 - calc(calc(1.125rem * .8) / 1.75))) rotateZ(45deg);
+            &.tnt-switch {
+                @each $colorClass in $color-classes {
+                    &.tnt-tint-color-#{$colorClass} {
+                        .tnt-checkbox {
+                            background-color: var(--tnt-color-#{$colorClass});
+                            border-color: var(--tnt-color-#{$colorClass});
+                        }
+                    }
                 }
-            }
 
-            &:has(input:disabled) {
-                .tnt-checkbox:before {
-                    background-color: $tnt-color-outline;
-                    border-color: $tnt-color-outline;
+                @each $colorClass in $color-classes {
+                    &.tnt-fg-color-#{$colorClass} {
+                        .tnt-checkbox:after {
+                            background-color: var(--tnt-color-#{$colorClass});
+                        }
+                    }
+                }
+
+                .tnt-checkbox {
+                    &:before {
+                        transform: translateX(1.125rem);
+                    }
+
+                    &:after {
+                        transform: translateX(1.125rem) scale(1.35);
+                        filter: invert(1);
+                    }
+                }
+
+                &:has(input:disabled) {
+                    .tnt-checkbox {
+                        background-color: $tnt-color-on-surface;
+                        border-color: $tnt-color-on-surface;
+                    }
                 }
             }
         }
@@ -277,17 +374,17 @@
 
         &:focus-within, &:hover {
             &:not(:has(input:disabled)) {
-                .tnt-checkbox {
-                    background-color: color-mix(in srgb, $tnt-color-shadow 50%, transparent);
+                &:not(.tnt-switch) {
+                    .tnt-checkbox {
+                        background-color: color-mix(in srgb, $tnt-color-shadow 50%, transparent);
+                    }
                 }
-            }
-        }
 
-        &.tnt-placeholder, &:not(:has(input:placeholder-shown)), &:focus-within {
-            .tnt-label {
-                transform: none !important;
-                color: inherit;
-                @extend .tnt-body-large;
+                &.tnt-switch {
+                    .tnt-checkbox:before {
+                        background-color: color-mix(in srgb, $tnt-color-shadow 70%, transparent);
+                    }
+                }
             }
         }
 
@@ -298,17 +395,22 @@
 
             &:focus-within, &:hover {
                 &:not(:has(input:disabled)) {
-                    .tnt-checkbox {
+
+                    &:not(.tnt-switch) .tnt-checkbox, &.tnt-switch .tnt-checkbox:before {
                         background-color: color-mix(in srgb, $tnt-color-error 30%, transparent);
                     }
                 }
             }
 
             &:has(input:checked) {
-                .tnt-checkbox:before {
+                &:not(.tnt-switch) .tnt-checkbox:before, &.tnt-switch .tnt-checkbox {
                     background-color: $tnt-color-error;
                     border-color: $tnt-color-error;
                 }
+            }
+
+            .tnt-checkbox{
+                border-color: $tnt-color-error;
             }
 
             .tnt-checkbox:before {
