Refactor Chips component and add OnTintColor support
Replaced TnTInputChip with TnTChip in Chips.razor, adding new properties and event handlers. Created a new TnTChip partial class with extensive properties and rendering logic. Removed old TnTChip and TnTInputChip Razor components and code-behinds. Updated MainLayout.razor with a new navigation link for Chips.

Enhanced CssClassBuilder, TnTInteractableComponentBase, TnTInteractablePageScriptComponent, TnTInputBase, ITnTInteractable, and TnTSideNavMenuGroup to support OnTintColor. Updated _chips.scss and _colors.scss with new styles for TnTChip and OnTintColor.

--- a/LiveTest/LiveTest.Client/Pages/Chips.razor
+++ b/LiveTest/LiveTest.Client/Pages/Chips.razor
@@ -3,14 +3,25 @@
 @rendermode InteractiveAuto
 
 
-<TnTComponents.TnTInputChip StartIcon="@(new MaterialIcon(MaterialIcon.GridOn))">
-    Text
-</TnTComponents.TnTInputChip>
+<TnTComponents.TnTChip Label="Chip" @bind-Value="_a" BindAfter="Checked" />
+<TnTComponents.TnTChip StartIcon="@(new MaterialIcon(MaterialIcon.GridOn))" Label="Chip" BindAfter="Checked" @bind-Value="_b" />
+<TnTComponents.TnTChip Label="Chip" CloseButtonClicked="@Closed" @bind-Value="_c" BindAfter="Checked" />
+<TnTComponents.TnTChip StartIcon="@(new MaterialIcon(MaterialIcon.GridOn))" Label="Chip" CloseButtonClicked="@Closed" BindAfter="Checked" @bind-Value="_d" />
 
 
-<TnTComponents.TnTInputChip >
-    Text
-</TnTComponents.TnTInputChip>
+@code {
+    private bool _a;
+    private bool _b;
+    private bool _c;
+    private bool _d;
 
 
+    private void Checked(bool b) {
+        Console.WriteLine(b);
+    }
+
+    private void Closed() {
+        Console.WriteLine("Closed");
+    }
+}
 
