--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -31,7 +31,9 @@
                 Image Buttons
             </TnTSideNavMenuLink>
         </TnTSideNavMenuGroup>
-
+        <TnTSideNavMenuLink Icon="@(new MaterialIcon(MaterialIcon.ChildCare))" Href="/chips" Match="NavLinkMatch.All" Status="100">
+            Chips
+        </TnTSideNavMenuLink>
 
 
 
