Refactor dialog components and update service interfaces
Refactored various dialog components to use the new ITnTDialogService interface. Updated TnTDialogService to implement ITnTDialogService and changed its visibility to internal. Modified TnTAccordion base class and removed unused properties and methods. Adjusted MainLayout navigation links. Updated namespaces and service registrations accordingly.

--- a/TnTComponents/Accordion/TnTAccordion.razor
+++ b/TnTComponents/Accordion/TnTAccordion.razor
@@ -1,5 +1,5 @@
 ﻿@using TnTComponents.Core
-@inherits TnTPageScriptComponent<TnTAccordion>
+@inherits TnTComponentBase
 @namespace TnTComponents
 <CascadingValue IsFixed="true" Value="this">
     <div @attributes="AdditionalAttributes"
