--- a/LiveTest/LiveTest.Client/Components/DialogComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/DialogComponent.razor
@@ -1,25 +1,26 @@
 ﻿@using LiveTest.Client.Pages
+@using TnTComponents
 @using TnTComponents.Dialog
 @rendermode InteractiveAuto
 <h3>DialogComponent</h3>
 
-<TnTComponents.TnTButton OnClick="OpenDialog">
+<TnTComponents.TnTButton OnClickCallback="OpenDialog">
     Open
 </TnTComponents.TnTButton>
 
-<TnTComponents.TnTButton OnClick="OpenCloseDialog">
+<TnTComponents.TnTButton OnClickCallback="OpenCloseDialog">
     Open Close Dialog @index
 </TnTComponents.TnTButton>
 
 @if (_dialog is not null) {
-    <TnTComponents.TnTButton OnClick="Close">
+    <TnTComponents.TnTButton OnClickCallback="Close">
         Close
     </TnTComponents.TnTButton>
 }
 
 @code {
     [Inject]
-    private TnTDialogService _service { get; set; } = default!;
+    private ITnTDialogService _service { get; set; } = default!;
 
     [CascadingParameter]
     private ITnTDialog? _dialog { get; set; }
