--- a/TnTComponents/Layout/TnTLayout.razor
+++ b/TnTComponents/Layout/TnTLayout.razor
@@ -2,9 +2,7 @@
 @inherits TnTComponentBase
 @namespace TnTComponents
 
-<tnt-layout>
-    <CascadingValue Value="this" IsFixed="true">
+<tnt-layout @attributes="AdditionalAttributes" class="@ElementClass" style="@ElementStyle" lang="@ElementLang" id="@ElementId" title="@ElementTitle" @ref="Element">
         @ChildContent
-    </CascadingValue>
 </tnt-layout>
 <TnTPageScript Src="./_content/TnTComponents/Layout/TnTLayout.razor.js" />
